--- a/app/src/main/res/raw/about.html
+++ b/app/src/main/res/raw/about.html
@@ -7,8 +7,13 @@
 <link rel="stylesheet" type="text/css" href="file:///android_asset/style.css">
 </head>
 <html>
-<body class="about" dir="%dir%">
+<body dir="%dir%">
     <br>
     <span style="font-size: 24pt">%about-title%&nbsp;%about-version%</span>
+    <p id="first">%your-rights-content1%</p>
+    <p>%your-rights-content2%</p>
+    <p>%your-rights-content3%</p>
+    <p>%your-rights-content4%</p>
+    <p>%your-rights-content5%</p>
 </body>
 </html>
