--- a/app/src/main/res/raw/about.html
+++ b/app/src/main/res/raw/about.html
@@ -4,7 +4,7 @@
    - You can obtain one at http://mozilla.org/MPL/2.0/.  -->
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="file:///android_asset/style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <html>
 <body dir="%dir%">
