Closes #691 - Make license changes.

--- a/app/src/main/assets/licenses.html
+++ b/app/src/main/assets/licenses.html
@@ -35,7 +35,7 @@
 <h2><a name="mpl2">Mozilla Public License 2.0</a></h2>
 
 <ul>
-	<li>Focus - https://github.com/mozilla-mobile/focus-android</li>
+	<li>Firefox for Amazon's Fire TV - https://github.com/mozilla-mobile/firefox-tv</li>
 	<li>Telemetry - https://github.com/mozilla-mobile/telemetry-android</li>
 </ul>
 
@@ -193,9 +193,12 @@
 	<li>com.android.support : support-v4</li>
 	<li>com.android.support : support-vector-drawable</li>
 	<li>com.android.support : transition</li>
+	<li>com.android.support.constraint : constraint-layout</li>
 	<li>org.jetbrains : annotations</li>
 	<li>org.jetbrains.kotlin : kotlin-stdlib</li>
 	<li>org.jetbrains.kotlin : kotlin-stdlib-jre7</li>
+	<li>org.jetbrains.kotlin : kotlinx-coroutines-android</li>
+	<li>org.jetbrains.kotlin : kotlinx-coroutines-core</li>
 </ul>
 
 	<p><strong><a name="definitions">1. Definitions</a></strong>.</p>
