Issue #691 - Address nits.

--- a/app/src/main/assets/licenses.html
+++ b/app/src/main/assets/licenses.html
@@ -36,6 +36,7 @@
 
 <ul>
 	<li>Firefox for Amazon's Fire TV - https://github.com/mozilla-mobile/firefox-tv</li>
+	<li>Android Browser Components - https://github.com/mozilla-mobile/android-components</li>
 	<li>Telemetry - https://github.com/mozilla-mobile/telemetry-android</li>
 </ul>
 
@@ -917,10 +918,6 @@ DAMAGES.
 </p>
 
 <h3>END OF TERMS AND CONDITIONS</h3>
-
-<!-- ****************************************************************************************************************************** -->
-<!-- ****************************************************************************************************************************** -->
-<!-- ****************************************************************************************************************************** -->
 
 </body>
 </html>
