Issue #741 - Add "Your Rights" into About page.

--- a/app/src/main/res/raw/about.html
+++ b/app/src/main/res/raw/about.html
@@ -10,6 +10,7 @@
 <body dir="%dir%">
     <br>
     <span style="font-size: 24pt">%about-title%&nbsp;%about-version%</span>
+    <h3>%your-rights%</h3>
     <p id="first">%your-rights-content1%</p>
     <p>%your-rights-content2%</p>
     <p>%your-rights-content3%</p>
