Issue #908 - Clean up existing licenses, reorder.

--- a/app/src/main/assets/licenses.html
+++ b/app/src/main/assets/licenses.html
@@ -174,32 +174,17 @@
 <h2><a name="apache2">Apache License 2.0</a></h2>
 
 <ul>
-	<li>android.arch.core : common</li>
-	<li>android.arch.core : runtime</li>
-	<li>android.arch.lifecycle : common</li>
-	<li>android.arch.lifecycle : extensions</li>
-	<li>android.arch.lifecycle : runtime</li>
-	<li>com.android.support : animated-vector-drawable</li>
 	<li>com.android.support : appcompat-v7</li>
 	<li>com.android.support : cardview-v7</li>
 	<li>com.android.support : customtabs</li>
 	<li>com.android.support : design</li>
+	<li>com.android.support : leanback-v17</li>
 	<li>com.android.support : recyclerview-v7</li>
-	<li>com.android.support : support-annotations</li>
-	<li>com.android.support : support-compat</li>
-	<li>com.android.support : support-core-ui</li>
-	<li>com.android.support : support-core-utils</li>
 	<li>com.android.support : support-fragment</li>
-	<li>com.android.support : support-media-compat</li>
 	<li>com.android.support : support-v4</li>
-	<li>com.android.support : support-vector-drawable</li>
-	<li>com.android.support : transition</li>
 	<li>com.android.support.constraint : constraint-layout</li>
-	<li>org.jetbrains : annotations</li>
-	<li>org.jetbrains.kotlin : kotlin-stdlib</li>
-	<li>org.jetbrains.kotlin : kotlin-stdlib-jre7</li>
+	<li>org.jetbrains.kotlin : kotlin-stdlib-jdk7</li>
 	<li>org.jetbrains.kotlin : kotlinx-coroutines-android</li>
-	<li>org.jetbrains.kotlin : kotlinx-coroutines-core</li>
 </ul>
 
 	<p><strong><a name="definitions">1. Definitions</a></strong>.</p>
