--- a/app/src/main/assets/licenses.html
+++ b/app/src/main/assets/licenses.html
@@ -25,6 +25,7 @@
 <ul>
 	<li><a href="#mpl2">Mozilla Public License 2.0</a></li>
 	<li><a href="#apache2">Apache License 2.0</a></li>
+	<li><a href="#sentry">Sentry License</a></li>
 	<li><a href="#lgpl21">GNU Lesser General Public License 2.1</a></li>
 </ul>
 
@@ -338,6 +339,46 @@
 	Contributor by reason of your accepting any such warranty or additional
 	liability.</p>
 	<p>END OF TERMS AND CONDITIONS</p>
+
+<!-- ****************************************************************************************************************************** -->
+<!-- ****************************************************************************************************************************** -->
+<!-- ****************************************************************************************************************************** -->
+
+<h2><a name="sentry">Sentry License</a></h2>
+
+<ul>
+	<li>io.sentry : sentry-android</li>
+</ul>
+
+<p>Copyright (c) 2017 Functional Software, Inc and individual contributors.
+	All rights reserved.</p>
+<p>Redistribution and use in source and binary forms, with or without
+	modification, are permitted provided that the following conditions are
+	met:</p>
+<ol>
+	<li>Redistributions of source code must retain the above copyright notice,
+		this list of conditions and the following disclaimer.
+	</li>
+	<li>Redistributions in binary form must reproduce the above copyright
+		notice, this list of conditions and the following disclaimer in the
+		documentation and/or other materials provided with the distribution.
+	</li>
+	<li>Neither the name of the Sentry nor the names of its contributors may
+		be used to endorse or promote products derived from this software
+		without specific prior written permission.
+	</li>
+</ol>
+<p>THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS “AS
+	IS” AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+	THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+	PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
+	CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+	EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+	PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+	PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+	LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+	NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+	SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
 
 <!-- ****************************************************************************************************************************** -->
 <!-- ****************************************************************************************************************************** -->
