Closes #908 - Add okhttp, picasso to licenses.

--- a/app/src/main/assets/licenses.html
+++ b/app/src/main/assets/licenses.html
@@ -186,6 +186,8 @@
 	<li>com.android.support.constraint : constraint-layout</li>
 	<li>org.jetbrains.kotlin : kotlin-stdlib-jdk7</li>
 	<li>org.jetbrains.kotlin : kotlinx-coroutines-android</li>
+	<li>com.squareup.okhttp3 : okhttp:3.11.0</li>
+	<li>com.squareup.picasso : picasso:2.71828</li>
 </ul>
 
 	<p><strong><a name="definitions">1. Definitions</a></strong>.</p>
