--- a/app/src/main/res/raw/about.html
+++ b/app/src/main/res/raw/about.html
@@ -5,6 +5,15 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css">
+<style>
+    body {
+        background-color: #38383d;
+        color: #f9f9fa;
+    }
+    a {
+        color: #f9f9fa;
+    }
+</style>
 </head>
 <html>
 <body dir="%dir%">
