Closes #1327 - review: Use date.getTime(), rather than .random(), as unique identifier in html.

--- a/app/src/androidTest/assets/pages/basic_nav3.html
+++ b/app/src/androidTest/assets/pages/basic_nav3.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script>
-        document.title = Math.random(); // any unique identifier per page load.
+        document.title = new Date().getTime(); // any unique identifier per page load.
     </script>
 </head>
 <body>
